test/errors/error10.base
Expecting a list of value declarations '{ val x:... }' or a type alias ': type' but got '='
type x = int;
      ^
